content(web): add html paragraphs

--- a/portfolio.html
+++ b/portfolio.html
@@ -147,6 +147,7 @@
           </div>
           <div class="project-description">
             <h3>Books Gallery</h3>
+            <p>HTML5, BOOTSTRAP</p>
             <p>Awesome book gallery with insightful reviews about</p>
           </div>
           <div class="project-buttons">
@@ -169,6 +170,8 @@
           </div>
           <div class="project-description">
             <h3>Sunshine</h3>
+            <p>HTML5, CSS3, SASS</p>
+
             <p>
               Swimwear online shop with products displayed using images and
               social media tags.
@@ -194,6 +197,8 @@
           </div>
           <div class="project-description">
             <h3>Vegan Tamales</h3>
+            <p>HTML5, CSS3, SASS</p>
+
             <p>
               Food cart with delicious vegan options with ingredients 100%
               natural
