styles(web): update experience information
Add tools on experience section.

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
       property="og:url"
       content="https://katherine-na.github.io/katherine-portfolio/portfolio"
     />
-    <meta property="og:image" content="images/myPortfolio.png" />
+    <meta property="og:image" content="images/coverPortfolio.png" />
     <meta property="og:site_name" content="Katherine's Portfolio" />
   </head>
   <body>
@@ -248,7 +248,7 @@
             </p>
             <span>
               <i class="fa-solid fa-laptop-code"></i> Tools used: Git, GitHub,
-              HTML5, Vue.js</span
+              Django, Bash, Linux, MacOS, HTML5, CSS, Vue.js</span
             >
             <ul>
               <li>Update & improve the appearance of Knowledgise web app</li>
@@ -280,9 +280,10 @@
               <i class="fa-solid fa-calendar-days"></i> Jul 2020 to Apr 2022
             </p>
             <span>
-              <i class="fa-solid fa-laptop-code"></i> Tools used: Git, GitHub,
-              HTML5, Vue.js</span
-            >
+              <i class="fa-solid fa-laptop-code"></i> Tools used: WordPress,
+              Microsoft Office, MacOS, Google Apps, Terminal, Figma, Bash, VS
+              Code, Slack
+            </span>
             <ul>
               <li>
                 Help with editing image files, data extraction, documentation
