syles(web): update skills section
Add new skills with images.

--- a/portfolio.html
+++ b/portfolio.html
@@ -109,6 +109,14 @@
           <p>boostrap</p>
         </div>
         <div class="item">
+          <img src="images/skills/sass.png" />
+          <p>Sass</p>
+        </div>
+        <div class="item">
+          <img src="images/skills/figma.png" />
+          <p>Figma</p>
+        </div>
+        <div class="item">
           <img src="images/skills/linux.png" />
           <p>Linux</p>
         </div>
@@ -121,11 +129,16 @@
           <p>Invision</p>
         </div>
         <div class="item">
-          <img src="images/skills/sass.jpg" />
-          <p>Sass</p>
+          <img src="images/skills/vscode.png" />
+          <p>VSCode</p>
         </div>
         <div class="item">
-          <img src="images/skills/rd.jpg" />
+          <img src="images/skills/wordpress.webp" />
+          <p>WordPress</p>
+        </div>
+
+        <div class="item">
+          <img src="images/skills/responsive.jpg" />
           <p>
             Responsive<br />
             Design
