styles(web): update responsive design
Add responsive design to each section.

--- a/portfolio.html
+++ b/portfolio.html
@@ -365,6 +365,7 @@
       </div>
     </section>
 
+    <!--education section-->
     <section id="education">
       <div class="education-items">
         <div class="education-subtitle">
