content(web): update certificates section
Add ceertificates

--- a/portfolio.html
+++ b/portfolio.html
@@ -425,6 +425,26 @@
             >
           </div>
         </div>
+        <div class="certificate-item">
+          <div class="certificate-html">
+            <img src="images/cert-js.png" />
+            <a
+              href="https://coursera.org/share/fd2cda2080f5e301735f3b38099d4d52"
+              target="_blank"
+              >Introduction to JavaScript</a
+            >
+          </div>
+        </div>
+        <div class="certificate-item">
+          <div class="certificate-html">
+            <img src="images/cert-rd.png" />
+            <a
+              href="https://coursera.org/share/237a947e8c8682338c916ae88beffabb"
+              target="_blank"
+              >Responsive Design</a
+            >
+          </div>
+        </div>
       </div>
     </section>
 
