--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,13 @@
       <div class="navigation-bar-links">
         <ul>
           <li>
-            <a href="#skills">Skills</a>
+            <a class="navigation-bar-sections" href="#skills">Skills</a>
           </li>
           <li>
-            <a href="#my-projects">Projects</a>
+            <a class="navigation-bar-sections" href="#my-projects">Projects</a>
           </li>
           <li>
-            <a href="#experience">Experience</a>
+            <a class="navigation-bar-sections" href="#experience">Experience</a>
           </li>
           <li>
             <a
@@ -93,35 +93,35 @@
       </div>
       <div class="skills-items">
         <div class="item">
-          <img src="images/skills/html.png" />
+          <img class="skill-image" src="images/skills/html.png" />
           <p>HTML5</p>
         </div>
         <div class="item">
-          <img src="images/skills/css.png" />
+          <img class="skill-image" src="images/skills/css.png" />
           <p>CSS3</p>
         </div>
         <div class="item">
-          <img src="images/skills/javascript-logo-1.png" />
+          <img class="skill-image" src="images/skills/javascript-logo-1.png" />
           <p>JavaScript</p>
         </div>
         <div class="item">
-          <img src="images/skills/boostrap.png" />
+          <img class="skill-image" src="images/skills/boostrap.png" />
           <p>boostrap</p>
         </div>
         <div class="item">
-          <img src="images/skills/sass.png" />
+          <img class="skill-image" src="images/skills/sass.png" />
           <p>Sass</p>
         </div>
         <div class="item">
-          <img src="images/skills/figma.png" />
+          <img class="skill-image" src="images/skills/figma.png" />
           <p>Figma</p>
         </div>
         <div class="item">
-          <img src="images/skills/linux.png" />
+          <img class="skill-image" src="images/skills/linux.png" />
           <p>Linux</p>
         </div>
         <div class="item">
-          <img src="images/skills/git-icon.png" />
+          <img class="skill-image" src="images/skills/git-icon.png" />
           <p>Git</p>
         </div>
         <div class="item">
@@ -129,16 +129,16 @@
           <p>Invision</p>
         </div>
         <div class="item">
-          <img src="images/skills/vscode.png" />
+          <img class="skill-image" src="images/skills/vscode.png" />
           <p>VSCode</p>
         </div>
         <div class="item">
-          <img src="images/skills/wordpress.webp" />
+          <img class="skill-image" src="images/skills/wordpress.webp" />
           <p>WordPress</p>
         </div>
 
         <div class="item">
-          <img src="images/skills/responsive.jpg" />
+          <img class="skill-image" src="images/skills/responsive.jpg" />
           <p>
             Responsive<br />
             Design
